C2: -XX:+AggressiveUnboxing is broken

XMLWordPrintable

    • b07

        The following assert is hit with -XX:+AggressiveUnboxing:

        # Internal Error (/Users/vlivanov/ws/jdk/open/jdk/src/hotspot/share/opto/phaseX.cpp:482), pid=61750, tid=43267
        # assert(!n->is_Phi() || n->as_Phi()->inst_mem_id() == -1) failed: should not be linked to data Phi

        Assert was added as part of JDK-8038348 (went into 7u/8u/9).

              Assignee:
              Vladimir Ivanov
              Reporter:
              Vladimir Ivanov
              Votes:
              0 Vote for this issue
              Watchers:
              3 Start watching this issue

                Created:
                Updated:
                Resolved: