8217918: C2: -XX:+AggressiveUnboxing is broken

Reviewed-by: kvn